--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
+    <p>a new line in the file of test.</p>
 </body>
 </html>
