--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./bluestyle.css">
+    <style>
+        .img{
+            width:100%;
+            max-width:960px;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello world!</h1>
+    <div class="img"><img src="hello-imgs.jpg" alt="Hello World from Space"></div>
     <p>This is the first file in my new Git Repo.</p>
     <p>a new line in the file of test.</p>
 </body>
